<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgabout"
    tools:context=".DetailActivity"
    tools:ignore="ExtraText">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="340dp"
        android:layout_height="661dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="446dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="340dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="51dp"
                app:srcCompat="@drawable/logoamd" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="340dp"
                android:layout_height="45dp"
                android:layout_marginTop="7dp"
                android:text="@string/procesorname"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0.085" />

            <TextView
                android:id="@+id/specdetail"
                android:layout_width="340dp"
                android:layout_height="30dp"
                android:text="@string/specs"
                android:textSize="15sp" />

            <TextView
                android:layout_width="340dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/descriptionprocesor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/descdetail"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/sharebutton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/share"
                android:src="@drawable/baseline_share_24" />
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>