<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgabout"
    tools:context=".About">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="264dp"
                android:layout_height="275dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/about"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="258dp"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                android:text="@string/me"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="258dp"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="15sp" />

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>